<?xml version="1.0" encoding="utf-8"?>
<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp">

            <TextView
                android:id="@+id/categoryIdTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textStyle="bold"
                tools:text="@string/basket_categoryId" />

            <TextView
                android:id="@+id/priceTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:text="@string/basket_price" />

            <TextView
                android:id="@+id/createdDateTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:text="@string/basket_createdDate" />

            <TextView
                android:id="@+id/productNameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:text="@string/basket_product" />

            <TextView
                android:id="@+id/stockTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:text="@string/basket_stock" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp">

                <TextView
                    android:id="@+id/minusTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="-"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/deleteBasketIv"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="?selectableItemBackground"
                    android:src="@drawable/ic_delete_item" />

                <TextView
                    android:id="@+id/plusTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="+"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/numberTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>